// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HamburgerIcon component matches the rendered snapshot with default props 1`] = `
<svg
  height="12px"
  version="1.1"
  viewBox="0 0 18 12"
  width="18px"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <g
    fill="none"
    fillRule="evenodd"
    id="Page-1"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="Website-01-(Mobile)"
      transform="translate(-341.000000, -48.000000)"
    >
      <g
        id="baseline-menu-24px-(1)"
        transform="translate(338.000000, 42.000000)"
      >
        <polygon
          id="Path"
          points="0 0 24 0 24 24 0 24"
        />
        <path
          d="M4,18 L20,18 C20.5522847,18 21,17.5522847 21,17 C21,16.4477153 20.5522847,16 20,16 L4,16 C3.44771525,16 3,16.4477153 3,17 C3,17.5522847 3.44771525,18 4,18 Z M4,13 L20,13 C20.5522847,13 21,12.5522847 21,12 C21,11.4477153 20.5522847,11 20,11 L4,11 C3.44771525,11 3,11.4477153 3,12 C3,12.5522847 3.44771525,13 4,13 Z M3,7 C3,7.55228475 3.44771525,8 4,8 L20,8 C20.5522847,8 21,7.55228475 21,7 C21,6.44771525 20.5522847,6 20,6 L4,6 C3.44771525,6 3,6.44771525 3,7 Z"
          fill="#000000"
          id="Shape"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Home component matches the rendered snapshot with default props 1`] = `
<div
  className="page"
>
  <div
    className="page-wrapper"
  >
    <div
      className="header"
    >
      <img
        alt="Taskly"
        src="./images/taskly-logo.svg"
      />
      <div
        className="header-buttons"
      >
        <div
          className="header-button-item"
        >
          Services
        </div>
        <div
          className="header-button-item"
        >
          About Us
        </div>
        <div
          className="header-button-item"
        >
          Contact
        </div>
      </div>
    </div>
    <div
      className="main"
    >
      <h1>
        Get a virtual assistant. Organize like never before.
      </h1>
      <RedButton
        className="login-button"
        handleOnClick={[MockFunction]}
        isLoading={false}
        text="Connect with Wallet"
      />
      <div
        className="app-store-badges"
      >
        <img
          alt="Download on Google"
          src="./images/google-badge.png"
        />
        <img
          alt="Download on Apple"
          src="./images/apple-badge.png"
        />
      </div>
    </div>
    <RedBackground
      bottom="auto"
      left="auto"
      right="-20px"
      side="right"
      top="20%"
    >
      <img
        alt="Peeps!"
        src="./images/peeps.png"
      />
    </RedBackground>
  </div>
</div>
`;

exports[`Home component matches the rendered snapshot with isLoggingIn true and smaller window width 1`] = `
<div
  className="page"
>
  <div
    className="page-wrapper"
  >
    <div
      className="header"
    >
      <img
        alt="Taskly"
        src="./images/taskly-logo.svg"
      />
      <div
        className="header-buttons"
      >
        <HamburgerIcon />
      </div>
    </div>
    <div
      className="main"
    >
      <h1>
        Get a virtual assistant. Organize like never before.
      </h1>
      <RedButton
        className="login-button"
        handleOnClick={[MockFunction]}
        isLoading={false}
        text="Connect with Wallet"
      />
      <div
        className="app-store-badges"
      >
        <img
          alt="Download on Google"
          src="./images/google-badge.png"
        />
        <img
          alt="Download on Apple"
          src="./images/apple-badge.png"
        />
      </div>
    </div>
    <RedBackground
      bottom="auto"
      left="auto"
      right="-20px"
      side="right"
      top="20%"
    >
      <img
        alt="Peeps!"
        src="./images/peeps.png"
      />
    </RedBackground>
  </div>
</div>
`;
